update TP